
	o Hs.test allows for testing differences in expected
	heterozygosity between two groups of individuals

	o strata tutorial is now available via
	adegenetTutorial(which="strata")

	o repool can now handle objects with no population information,
	and can return a list of repooled genind (argument 'list'
	defauling to FALSE)

	o read.fstat can now handle missing data coded by any number of
	"0"

BUG FIXES
	o Hs no longer returns NaN if one locus has not been typed;
	instead, computations are done using all available loci

	o adegenetTutorial now opens up-to-date tutorials

	o subsetting genlight objects now treats missing data appropriately
	when given logical, character, or negative subscripts.
	(See issue #83 (https://github.com/thibautjombart/adegenet/issues/83))

	o fixed occasional spurious warning about duplicated individual
	labels in df2genind



			CHANGES IN ADEGENET VERSION 2.0.0
CHANGES IN GENIND/GENPOP/GENLIGHT OBJECTS
	o generic labels are no longer used; therefore, 'truenames' is now
	deprecated

	o @tab now stores integers representing counts of alleles, as
	opposed to the former numeric for allele frequencies

	o @ploidy is now a vector with one value per individual; ploidy
	can differ across individuals

	o @loc.names, @ind.names, @pop.names have been removed

	o accessors locNames, indNames and popNames can be used to replace
	calls to the removed slots

	o hierarchical structure is implemented in genind and genlight
	objects, by the addition of two new slots @strata and @hierarchy.

	o subsetting genlight objects is now up to 10x faster.


NEW FEATURES
	o ploidy can now vary across individuals

	o printing is now consistent across objects classes

	o summary methods now get a verbose argument

	o df2genind is more flexible and faster

	o genind objects size is roughly divided by 2

	o adegenet is now better integrated alongside other packages
	including pegas and hierfstat; functions for HW test and F