@@ -1,4 +1,4 @@
-# Generated by roxygen2: do not edit by hand
+# Generated by roxygen2 (4.1.1): do not edit by hand
 
 S3method(as.POSIXct,haploGen)
 S3method(as.data.frame,genind)
